# inspect-cot-monitor

./: .gitignore  analyze_figure3.py  cot_monitor-demo.py  extract_hints_from_logs.py  hint.py  main.py  pyproject.toml  run_figure3_experiment.sh
figure-3/: logs.json
logs/: 2025-08-22T15-56-04-04-00_email-monitoring-task_aFSP7GdufhKzPqChzU5m8m.eval  2025-08-22T15-57-02-04-00_email-monitoring-task_8ES5tT9YMqautjbjkyp7fy.eval  2025-08-22T16-06-53-04-00_email-monitoring-task_fLYVu3RKVnV4jYdZbxsKcq.eval  2025-08-22T16-42-41-04-00_email-monitoring-task_FyhVUMFmfeUDVEv3qmyQw7.eval  2025-08-22T16-42-48-04-00_email-monitoring-task_KTtfv3uLBxrwuHbwuhp98V.eval  2025-08-22T16-57-19-04-00_email-monitoring-task_kCajWZd7EBoMH4rsnZQugK.eval  2025-08-22T16-59-41-04-00_email-monitoring-task_Faow5MJu3KcJjkYcWsTfes.eval
src/hint-experiment/: README.md  gpqa_hint_task.py
src/hint-experiment/agent-scripts/: README.md  debug_correctness.py  debug_hint_scorer.py  debug_scorer.py  run_experiment.py  show_examples.py  test_gpqa.py
wandb/: settings
