[project]
name = "inspect-cot-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inspect-ai>=0.3.123",
    "openai>=1.101.0",
    "datasets>=3.0.0",
    "python-dotenv>=1.0.0",
    "wandb>=0.21.3",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]
